--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-beauty</title>
+    <title>Beauty Vayi</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico?v=5.1.2" />
   </head>
   <body>
     <div id="app"></div>
